disconnect btn added

--- a/src/main/resources/com/o4codes/copaste/styles/light.css
+++ b/src/main/resources/com/o4codes/copaste/styles/light.css
@@ -108,7 +108,7 @@
 }
 
 .secondary-container {
-    -fx-background-color: #eeeeee;
+    -fx-background-color: #b3e5fc;
     -fx-text-fill: #424242;
     -fx-font-size: 14px;
     -fx-font-weight: bold;
